k8s/caching-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caching-service
  labels:
    app: caching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caching-service
  template:
    metadata:
      labels: 
        app: caching-service
    spec:
      containers:
      - name: caching-service
        image: allahthedev/caching-service
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: caching-service
spec:
  selector:
    app: caching-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
