k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-zookeeper-deployment
  labels:
    app: kafka-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-zookeeper
  template:
    metadata:
      labels: 
        app: kafka-zookeeper
    spec:
      containers:
      - name: zookeeper
        image: bitnami/zookeeper
        ports:
        - containerPort: 2181
      -name: kafka
        image: bitnami/kafka
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka-zookeeper
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
